fix insert import order

--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -116,7 +116,8 @@
         "logout": "Đăng Xuất",
         "showHiddenColumn": "Ẩn/ hiện cột",
         "back": "Trở về",
-        "nextQuery": "Tra cứu tiếp?"
+        "nextQuery": "Tra cứu tiếp?",
+        "payment": "Ghi nhận thanh toán"
     },
     "page": {
         "home": "Trang chủ",
@@ -281,7 +282,7 @@
         "s_inven_qty": "Số dư đầu kỳ",
         "e_inven_qty": "Số dư cuối kỳ",
         "trans_nm": "Loại giao dịch",
-        "qty":"Số lượng giao dịch",
+        "qty": "Số lượng giao dịch",
         "payment_amount": "Số tiền thanh toán",
         "payment_method": "Phương thức thanh toán",
         "payment_date": "Ngày thanh toán",
@@ -376,11 +377,11 @@
             "import_type_selloff": "Hàng khuyến mãi",
             "lot_no": "Số lô",
             "price": "Giá nhập",
-            "discount_per": "Phần trăm chiết khấu",
-            "vat_per": "Phầm trăm VAT",
-            "made_dt": "Ngày sản xuất",
+            "discount_per": "% Chiết khấu",
+            "vat_per": "% VAT",
+            "made_dt": "Ngày SX",
             "exp_dt": "Ngày hết HSD",
-            "qty": "Số lượng nhập",
+            "qty": "SL nhập",
             "titleAdd": "Thêm đơn hàng nhập",
             "titleEdit": "Cập nhật đơn hàng nhập",
             "titleView": "Xem chi tiết hóa đơn {{name}}",
@@ -389,7 +390,7 @@
             "titleList": "Danh sách đơn hàng nhập",
             "id": "Id của đơn nhập",
             "invoice_no": "Số hóa đơn",
-            "invoice_stat": "Trạng thái hóa đơn",
+            "invoice_stat": "TT hóa đơn",
             "invoice_stat_nm": "Trạng thái hóa đơn (tên)",
             "vender_id": "Nhà cung ứng (mã)",
             "vender_nm_v": "Nhà cung ứng (tên)",
@@ -759,9 +760,10 @@
         "trans_biz": "Mã nghiệp vụ",
         "trans_biz_nm": "Tên nghiệp vụ",
         "payment_method": "Hình thức thanh toán",
-        "payment_date":"Ngày thanh toán",
+        "payment_date": "Ngày thanh toán",
         "date_input": "Ngày nhập hệ thống",
         "payment_amount": "Số tiền thanh toán",
+        "excess_cash": "Tiền thừa",
         "note": "Ghi chú",
         "payment_type": "Loại hình thanh toán",
         "cash": "Tiền mặt",
