fix import order

--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -9,6 +9,7 @@
         "profile": "Thông tin",
         "emptyData": "Không có dữ liệu cần tra cứu!"
     },
+    "auto_update": "Ghi nhận bút toán chỉnh sửa tương ứng",
     "yes": "Đúng",
     "no": "Sai",
     "wrong_information": "Sai thông tin",
