--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -250,6 +250,7 @@
         },
         "supplier": {
             "search_name": "Tìm theo tên nhà cung ứng",
+            "titleQuickAdd": "Thêm nhanh nhà cung ứng",
             "titleAdd": "Thêm Nhà cung cấp",
             "titleEdit": "Cập nhật Nhà cung cấp",
             "titleRemove": "Xác nhận xóa Nhà cung cấp?",
@@ -288,12 +289,12 @@
         "payment_method": "Phương thức thanh toán",
         "payment_date": "Ngày thanh toán",
         "invoice_val": "Giá trị HĐ",
-        "bank_transf_acc_number": "Số TK chuyển",
-        "bank_transf_acc_name": "Tên TK chuyển",
-        "bank_transf_name": "Tên ngân hàng chuyển",
-        "bank_recei_acc_number": "Số TK nhận",
-        "bank_recei_acc_name": "Tên TK nhận",
-        "bank_recei_name": "Tên ngân hàng nhận",
+        "bank_transf_acc_number": "STK chuyển",
+        "bank_transf_acc_name": "Tên chủ TK chuyển",
+        "bank_transf_name": "Ngân hàng chuyển",
+        "bank_recei_acc_number": "STK nhận",
+        "bank_recei_acc_name": "Tên chủ TK nhận",
+        "bank_recei_name": "Ngân hàng nhận",
         "lot_no": "Số lô",
         "import_type": "Loại hàng",
         "inven": "Hàng tồn",
@@ -411,7 +412,7 @@
             "prod_id": "Id sản phẩm",
             "prod_nm": "Tên sản phẩm",
             "unit_id": "Đơn vị tính (mã)",
-            "unit_nm": "Đơn vị tính",
+            "unit_nm": "Đơn vị",
             "vals": "Tiền phải trả",
             "productEdit": "Chỉnh sửa sản phẩm nhập",
             "note": "Ghi chú",
