fix order & config page

--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -22,7 +22,8 @@
     "noData": "Không có dữ liệu",
     "wrongData": "Dữ liệu bị lỗi",
     "can_not_found_id_invoice_please_try_again": "Không tìm thấy id hóa đơn, vui lòng thử lại",
-    "auto_invoice": "Nếu để trống hệ thống sẽ tự tạo",
+    "auto_invoice": "Mã hóa đơn (Nhập hoặc hệ thống tự sinh)",
+    "only_get_inventory_lot_no": "Chỉ lấy số lô có SL tồn > 0",
     "transaction_statement_list": "Danh sách sao kê giao dịch",
     "invoice_no": "Mã hóa đơn",
     "invoice_status": "Trạng thái hóa đơn",
@@ -227,6 +228,7 @@
             "search_name": "Tìm theo tên khách hàng",
             "titleAdd": "Thêm Khách hàng",
             "titleQuickAdd": "Thêm nhanh khách hàng",
+            "titleQuickAddGuidle": "*Vui lòng qua trang Quản lý thông tin khách hàng để cập nhật thông tin",
             "titleEdit": "Cập nhật Khách hàng",
             "titleRemove": "Xác nhận xóa Khách hàng?",
             "titleView": "Xem chi tiết khách hàng {{name}}",
@@ -258,6 +260,7 @@
         "supplier": {
             "search_name": "Tìm theo tên nhà cung ứng",
             "titleQuickAdd": "Thêm nhanh nhà cung ứng",
+            "titleQuickAddGuidle": "*Vui lòng qua trang Quản lý thông tin nhà cung ứng để cập nhật thông tin",
             "titleAdd": "Thêm Nhà cung cấp",
             "titleEdit": "Cập nhật Nhà cung cấp",
             "titleRemove": "Xác nhận xóa Nhà cung cấp?",
@@ -492,6 +495,7 @@
             "titleCancel": "Xác nhận hủy đơn hàng xuất?",
             "title": "Danh sách đơn hàng xuất",
             "id": "Id của đơn xuất",
+            "exp_dt": "Ngày hết HSD",
             "invoice_no": "Số hóa đơn",
             "invoice_stat": "Trạng thái hóa đơn (mã)",
             "invoice_stat_nm": "Trạng thái hóa đơn",
