--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -28,7 +28,7 @@
     "retail_invoice": "Hóa đơn bán lẻ",
     "tooltip_retail_invoice": "Giá bán và %VAT sẽ được lấy theo giá bán lẻ",
     "invoice_no": "Mã hóa đơn",
-    "invoice_status": "Trạng thái hóa đơn",
+    "invoice_status": "Trạng thái HĐ",
     "all": "Tất cả",
     "import_payment": "Thanh toán nhập hàng",
     "collecting_sales": "Thu tiền bán hàng",
@@ -352,7 +352,7 @@
         "import_order": {
             "title": "Báo cáo nhập hàng",
             "invoice_no": "Số hóa đơn",
-            "invoice_stat": "Trạng thái hóa đơn: Bình thường; Đã hủy",
+            "invoice_stat": "Trạng thái HĐ: Bình thường; Đã hủy",
             "vender_nm_v": "Tên nhà cung ứng",
             "input_dt": "Ngày nhập hàng",
             "imp_tp_nm": "Loại hình nhập",
@@ -368,7 +368,7 @@
         "export_order": {
             "title": "Báo cáo xuất hàng",
             "invoice_no": "Số hóa đơn",
-            "invoice_stat": "Trạng thái hóa đơn: Bình thường; Đã hủy",
+            "invoice_stat": "Trạng thái HĐ: Bình thường; Đã hủy",
             "cust_nm_v": "Tên khách hàng",
             "input_dt": "Ngày xuất hàng",
             "exp_tp_nm": "Loại hình xuất",
@@ -405,15 +405,15 @@
             "id": "Id của đơn nhập",
             "invoice_no": "Số hóa đơn",
             "invoice_stat": "TT hóa đơn",
-            "invoice_stat_nm": "Trạng thái hóa đơn (tên)",
+            "invoice_stat_nm": "Trạng thái HĐ (tên)",
             "vender_id": "Nhà cung ứng (mã)",
-            "vender_nm_v": "Nhà cung ứng (tên)",
+            "vender_nm_v": "Tên nhà cung ứng",
             "vender_nm": "Nhà cung ứng",
             "order_dt": "Ngày nhập hàng",
             "cancel_reason": "Lý do hủy",
             "total_prod": "Tổng loại sp nhập",
             "invoice_type": "Loại hóa đơn",
-            "invoice_val": "Tổng giá trị hđ",
+            "invoice_val": "Tổng giá trị HĐ",
             "invoice_discount": "Tổng tiền chiết khấu",
             "invoice_vat": "Tổng tiền thuế VAT",
             "invoice_needpay": "Tổng tiền phải trả",
@@ -460,8 +460,8 @@
             "titleList": "Danh sách đơn hàng nhập tồn",
             "id": "Id của đơn nhập",
             "invoice_no": "Số hóa đơn",
-            "invoice_stat": "Trạng thái hóa đơn",
-            "invoice_stat_nm": "Trạng thái hóa đơn (tên)",
+            "invoice_stat": "Trạng thái HĐ",
+            "invoice_stat_nm": "Trạng thái HĐ (tên)",
             "vender_id": "Nhà cung ứng (mã)",
             "vender_nm_v": "Nhà cung ứng (tên)",
             "vender_nm": "Nhà cung ứng",
@@ -470,7 +470,7 @@
             "cancel_reason": "Lý do hủy",
             "total_prod": "Tổng loại sp nhập",
             "invoice_type": "Loại hóa đơn",
-            "invoice_val": "Tổng giá trị hđ",
+            "invoice_val": "Tổng giá trị HĐ",
             "invoice_discount": "Tổng tiền chiết khấu",
             "invoice_vat": "Tổng tiền thuế VAT",
             "invoice_needpay": "Tổng tiền phải trả",
@@ -499,8 +499,8 @@
             "id": "Id của đơn xuất",
             "exp_dt": "Ngày hết HSD",
             "invoice_no": "Số hóa đơn",
-            "invoice_stat": "Trạng thái hóa đơn (mã)",
-            "invoice_stat_nm": "Trạng thái hóa đơn",
+            "invoice_stat": "Trạng thái HĐ (mã)",
+            "invoice_stat_nm": "Trạng thái HĐ",
             "export_type": "Loại hình xuất",
             "export_type_buy": "Xuất bán",
             "export_type_selloff": "Hàng khuyến mãi",
@@ -515,7 +515,7 @@
             "reason": "Lý do",
             "cancel_reason": "Lý do hủy",
             "invoice_type": "Loại hóa đơn",
-            "invoice_val": "Tổng giá trị hđ",
+            "invoice_val": "Tổng giá trị HĐ",
             "invoice_discount": "Tổng tiền chiết khấu",
             "invoice_vat": "Tổng tiền thuế VAT",
             "invoice_needpay": "Tổng tiền phải trả",
@@ -554,8 +554,8 @@
             "title": "Danh sách đơn hàng xuất - trả",
             "id": "Id của đơn xuất",
             "invoice_no": "Số hóa đơn",
-            "invoice_stat": "Trạng thái hóa đơn (mã)",
-            "invoice_stat_nm": "Trạng thái hóa đơn",
+            "invoice_stat": "Trạng thái HĐ (mã)",
+            "invoice_stat_nm": "Trạng thái HĐ",
             "exportRepay_type": "Loại hình xuất",
             "exportRepay_type_buy": "Xuất trả",
             "exportRepay_type_selloff": "Hàng khuyến mãi",
@@ -570,7 +570,7 @@
             "reason": "Lý do",
             "cancel_reason": "Lý do hủy",
             "invoice_type": "Loại hóa đơn",
-            "invoice_val": "Tổng giá trị hđ",
+            "invoice_val": "Tổng giá trị HĐ",
             "invoice_discount": "Tổng tiền chiết khấu",
             "invoice_vat": "Tổng tiền thuế VAT",
             "invoice_needpay": "Tổng tiền phải trả",
@@ -616,8 +616,8 @@
             "title": "Danh sách hóa đơn xuất - hủy",
             "id": "Id của đơn xuất",
             "invoice_no": "Số hóa đơn",
-            "invoice_stat": "Trạng thái hóa đơn (mã)",
-            "invoice_stat_nm": "Trạng thái hóa đơn",
+            "invoice_stat": "Trạng thái HĐ (mã)",
+            "invoice_stat_nm": "Trạng thái HĐ",
             "exportRepay_type": "Loại hình xuất",
             "exportRepay_type_buy": "Xuất hủy",
             "exportRepay_type_selloff": "Hàng khuyến mãi",
@@ -630,7 +630,7 @@
             "cancel_reason": "Lý do hủy",
             "reason": "Lý do",
             "invoice_type": "Loại hóa đơn",
-            "invoice_val": "Tổng giá trị hđ",
+            "invoice_val": "Tổng giá trị HĐ",
             "invoice_discount": "Tổng tiền chiết khấu",
             "invoice_vat": "Tổng tiền thuế VAT",
             "invoice_needpay": "Tổng tiền phải trả",
@@ -735,6 +735,7 @@
         "title": "Sản phẩm",
         "productGroup": {
             "titleAdd": "Thêm nhóm sản phẩm",
+            "titleQuickAdd": "Thêm nhanh nhóm sản phẩm",
             "titleEdit": "Cập nhật nhóm sản phẩm",
             "titleRemove": "Xác nhận xóa nhóm sản phẩm?",
             "titleList": "Danh sách nhóm sản phẩm",
