update english language

--- a/src/asset/translation/en.json
+++ b/src/asset/translation/en.json
@@ -92,6 +92,7 @@
         "reportExportRepay": "Report Export Repay",
         "reportExportDestroy": "Report Export Destroy",
         "reportSettlement": "Report Settlement",
+        "reportTransactionStatement": "Transaction statement",
         "configUnit": "Unit",
         "configUnitRate": "Unit Rate",
         "configStoreLimit": "Store Limit",
