--- a/src/asset/translation/en.json
+++ b/src/asset/translation/en.json
@@ -2,7 +2,7 @@
     "stt": "Index",
     "lbl": {
         "welcome": "Welcome to application",
-        "search": "Search ...",
+        "search": "Search information",
         "rowsPerPage": "Row per page",
         "edit": "Update",
         "action": "Action",
