--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -15,7 +15,7 @@
     "min_unit": "Đơn vị nhỏ nhất",
     "auto_update": "Ghi nhận bút toán chỉnh sửa tương ứng",
     "yes": "Đúng",
-    "no": "Sai",
+    "no": "Không",
     "wrong_information": "Sai thông tin",
     "cancel_import": "Hủy nhập",
     "cancel_export": "Hủy xuất",
