--- a/src/asset/translation/en.json
+++ b/src/asset/translation/en.json
@@ -9,6 +9,7 @@
         "profile": "Profile",
         "emptyData": "Empty data!"
     },
+    "pharma": "Pharmacy",
     "print": "Print invoice",
     "invoice": "INVOICE",
     "invoice_code": "Invoice code",
