--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -9,6 +9,7 @@
         "profile": "Thông tin",
         "emptyData": "Không có dữ liệu cần tra cứu!"
     },
+    "pharma": "Nhà thuốc",
     "print": "In hóa đơn",
     "invoice": "HÓA ĐƠN",
     "invoice_code": "Mã hóa đơn",
