fix add product

--- a/src/asset/translation/en.json
+++ b/src/asset/translation/en.json
@@ -9,6 +9,7 @@
         "profile": "Profile",
         "emptyData": "Empty data!"
     },
+    "update_pharmacy_logo": "Update pharmacy logo",
     "pharma": "Pharmacy",
     "print": "Print invoice",
     "invoice": "INVOICE",
