--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -9,6 +9,7 @@
         "profile": "Thông tin",
         "emptyData": "Không có dữ liệu cần tra cứu!"
     },
+    "update_pharmacy_logo": "Cập nhật ảnh đại diện nhà thuốc",
     "pharma": "Nhà thuốc",
     "print": "In hóa đơn",
     "invoice": "HÓA ĐƠN",
