fix layout product

--- a/src/asset/translation/en.json
+++ b/src/asset/translation/en.json
@@ -236,6 +236,7 @@
         "packing": "Packing",
         "infoMain": "Main info",
         "infoExpand": "More info",
+        "orderInfoExpand": "Other info",
         "unitTime": "Unit time",
         "unit": "Unit",
         "config_info": "Config",
