--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -237,6 +237,7 @@
         "packing": "Quy cách đóng gói",
         "infoMain": "Thông tin chính",
         "infoExpand": "Thông tin mở rộng",
+        "orderInfoExpand": "Thông tin khác",
         "unitTime": "Đơn vị TG",
         "unit": "Đơn vị tính",
         "config_info": "Cấu hình",
